--- a/src/entities/questions/questionRow/ui/styles.module.css
+++ b/src/entities/questions/questionRow/ui/styles.module.css
@@ -1,3 +1,117 @@
+.row {
+  max-width: 764px;
+  border-bottom: 1px solid #d1d1d1;
+  padding-bottom: 19px;
+  margin-bottom: 24px;
+}
+.header {
+  margin-bottom: 24px;
+  font-size: 20px;
+}
+
 .title {
   cursor: pointer;
+  position: relative;
+}
+
+.title:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 6px;
+  width: 8px;
+  height: 8px;
+  background-color: #5533ff;
+  border-radius: 50%;
+}
+
+.title:after {
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  top: 2px;
+  right: 0;
+  transform: rotate(134deg);
+  border-top: 2px solid #6a0bff;
+  border-right: 2px solid #6a0bff;
+}
+
+.title,
+.section {
+  padding-left: 24px;
+}
+
+.meta {
+  display: flex;
+  gap: 25px;
+  margin-bottom: 24px;
+}
+
+.metaItem {
+  display: flex;
+  align-items: center;
+  padding: 6px 10px 6px;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 14px;
+  background-color: #f8f8f8;
+}
+
+.term {
+  margin-right: 12px;
+}
+
+.desc {
+  padding: 2px 4px;
+  background-color: #6a0bff;
+  color: #fff;
+  border-radius: 4px;
+}
+
+.figure {
+  margin-bottom: 24px;
+  max-width: 475px;
+  max-height: 312px;
+}
+
+.shortAnswer {
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 24px;
+  text-align: justify;
+}
+
+.nav {
+  text-align: right;
+}
+
+.more {
+  position: relative;
+  display: inline-block;
+  padding-right: 29px;
+  font-weight: 600;
+  color: #6a0bff;
+}
+.more:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 14px;
+  height: 14px;
+  transform: rotate(45deg);
+  border-top: 2px solid #6a0bff;
+  border-right: 2px solid #6a0bff;
+  z-index: 2;
+}
+
+.more:before {
+  content: "";
+  position: absolute;
+  top: 6px;
+  right: 0;
+  width: 18px;
+  border-top: 2px solid #6a0bff;
+  z-index: 1;
 }
