--- a/src/pages/questionsList/ui/styles.module.css
+++ b/src/pages/questionsList/ui/styles.module.css
@@ -1,1 +1,17 @@
+.container {
+  display: flex;
+  gap: 20px;
+}
 
+.container > section {
+  flex: 1 1 0;
+  max-width: 804px;
+}
+.container > aside {
+  flex: 0 0 392px;
+}
+
+.list {
+  padding: 24px 20px 40px;
+  background-color: #fff;
+}
