--- a/src/entities/questions/questionRow/ui/styles.module.css
+++ b/src/entities/questions/questionRow/ui/styles.module.css
@@ -1,5 +1,4 @@
 .row {
-  max-width: 764px;
   border-bottom: 1px solid #d1d1d1;
   padding-bottom: 19px;
   margin-bottom: 24px;
@@ -13,10 +12,13 @@
   cursor: pointer;
   position: relative;
 }
-
-.title:before {
+.title:before,
+.title:after {
   content: "";
   position: absolute;
+}
+
+.title:before {
   left: 0;
   top: 6px;
   width: 8px;
@@ -26,8 +28,6 @@
 }
 
 .title:after {
-  content: "";
-  position: absolute;
   width: 12px;
   height: 12px;
   top: 2px;
@@ -35,6 +35,11 @@
   transform: rotate(134deg);
   border-top: 2px solid #6a0bff;
   border-right: 2px solid #6a0bff;
+}
+
+.title.show:before,
+.title.show:after {
+  transform: rotate(-45deg);
 }
 
 .title,
@@ -115,3 +120,6 @@
   border-top: 2px solid #6a0bff;
   z-index: 1;
 }
+
+
+
