--- a/src/pages/questionsList/ui/styles.module.css
+++ b/src/pages/questionsList/ui/styles.module.css
@@ -1,17 +1,105 @@
+.wrapper {
+  margin-top: 40px;
+}
 .container {
+  position: relative;
   display: flex;
+  justify-content: center;
   gap: 20px;
 }
 
 .container > section {
   flex: 1 1 0;
   max-width: 804px;
-}
-.container > aside {
-  flex: 0 0 392px;
+  background-color: #fff;
+  padding: 24px 20px 40px;
+  border-radius: 24px;
 }
 
-.list {
-  padding: 24px 20px 40px;
+.title {
+  color: #191919;
+  padding-bottom: 17px;
+  margin-bottom: 40px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.2;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.container > aside {
+  flex: 0 1 392px;
+}
+
+.list > li {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: minmax(0, 1fr);
+}
+
+.filter {
   background-color: #fff;
+  padding: 24px;
+  align-self: flex-start;
+  max-width: 328px;
+  width: 100%;
+  border-radius: 24px;
+}
+
+.filterIcon {
+  display: none;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
+}
+
+.closeBtn {
+  position: absolute;
+  cursor: pointer;
+  top: 16px;
+  right: 16px;
+  width: 20px;
+  height: 20px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .filter {
+    position: absolute;
+    padding-top: 44px;
+    display: none;
+  }
+
+  .filterIcon,
+  .filterBtnClose {
+    display: block;
+  }
+
+  .filter.open {
+    display: block;
+    position: relative;
+    right: 0;
+  }
+}
+
+@media (max-width: 780px) {
+  .container > section {
+    padding: 20px 10px;
+  }
+
+  .filter.open {
+    position: absolute;
+    left: 0;
+    right: 0;
+    min-width: 100%;
+  }
+}
+
+@media (max-width: 375px) {
 }
