--- a/src/pages/questionsList/ui/styles.module.css
+++ b/src/pages/questionsList/ui/styles.module.css
@@ -1,14 +1,14 @@
 .wrapper {
   margin-top: 40px;
 }
-.container {
+.layout {
   position: relative;
   display: flex;
   justify-content: center;
   gap: 20px;
 }
 
-.container > section {
+.questions {
   flex: 1 1 0;
   max-width: 804px;
   background-color: #fff;
@@ -26,7 +26,17 @@
   border-bottom: 1px solid #e8e8e8;
 }
 
-.container > aside {
+.filterIcon {
+  display: none;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
+}
+
+.aside {
   flex: 0 1 392px;
 }
 
@@ -36,23 +46,13 @@
   grid-template-columns: minmax(0, 1fr);
 }
 
-.filter {
+.aside {
   background-color: #fff;
   padding: 24px;
   align-self: flex-start;
   max-width: 328px;
   width: 100%;
   border-radius: 24px;
-}
-
-.filterIcon {
-  display: none;
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  width: 36px;
-  height: 36px;
-  cursor: pointer;
 }
 
 .closeBtn {
@@ -70,7 +70,7 @@
 }
 
 @media (max-width: 768px) {
-  .filter {
+  .aside {
     position: absolute;
     padding-top: 44px;
     display: none;
@@ -81,7 +81,7 @@
     display: block;
   }
 
-  .filter.open {
+  .aside.asideOpen {
     display: block;
     position: relative;
     right: 0;
@@ -93,7 +93,7 @@
     padding: 20px 10px;
   }
 
-  .filter.open {
+  .aside.asideOpen {
     position: absolute;
     left: 0;
     right: 0;
@@ -102,4 +102,7 @@
 }
 
 @media (max-width: 375px) {
+  .questions {
+    padding: 20px 10px;
+  }
 }
