--- a/src/pages/questionDetails/ui/styles.module.css
+++ b/src/pages/questionDetails/ui/styles.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   margin-top: 75px;
+  padding: 0 30px 0;
 }
 
 .question {
@@ -84,129 +85,27 @@
   line-height: 1.3;
 }
 
-.metaIcon {
-  display: none;
-  width: 36px;
-  height: 36px;
-  position: absolute;
-  right: 16px;
-  top: 16px;
-  cursor: pointer;
-}
+@media (max-width: 920px) {
+  .wrapper {
+    padding: 0 20px 0;
+  }
 
-.aside {
-  position: relative;
-  background-color: #fff;
-  max-width: 392px;
-  width: 100%;
-  padding: 24px;
-  border-radius: 24px;
-  flex: 1 1 0;
-  align-self: start;
-}
-
-.sectionAside:not(:last-of-type) {
-  margin-bottom: 24px;
-}
-
-.titleAside {
-  color: #474747;
-  margin-bottom: 8px;
-  font-weight: 500;
-  line-height: 1.2;
-}
-
-.meta {
-  display: flex;
-  gap: 16px;
-}
-
-.metaItem {
-  display: flex;
-  gap: 12px;
-  background-color: #f8f8f8;
-  border-radius: 8px;
-  padding: 6px 10px;
-}
-
-.metaItem dd {
-  background-color: #6a0bff;
-  color: #fff;
-  padding: 2px 4px;
-  border-radius: 4px;
-}
-
-.keyword {
-  color: #6a0bff;
-  line-height: 1.6;
-}
-
-.footer {
-  position: absolute;
-  bottom: -42px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4px;
-}
-
-.authorTitle,
-.authorName {
-  color: #6a0bff;
-  font-size: 14px;
-  line-height: 1.2;
-}
-
-.authorTitle {
-  color: #303030;
-}
-
-.closeBtn {
-  position: absolute;
-  cursor: pointer;
-  width: 20px;
-  height: 20px;
-  top: 24px;
-  right: 24px;
-}
-
-@media (max-width: 900px) {
+  .question {
+    display: block;
+  }
   .sectionItem {
     padding: 20px 16px;
   }
 
-  .sectionHeader {
-    padding: 16px;
+  .sectionMain {
+    max-width: 100%;
   }
 
-  .metaIcon {
-    display: block;
-  }
 
-  .aside {
-    display: none;
-  }
-
-  .aside.showAside {
-    display: block;
-    padding: 52px 24px 57px;
-    border-radius: 0;
-    position: absolute;
-    top: 67px;
-    right: 0;
-    z-index: 2;
-  }
-
-  .footer {
-    position: absolute;
-    bottom: 24px;
-  }
 }
 
-@media (max-width: 560px) {
-  .question {
-    display: block;
+@media (max-width: 420px) {
+  .wrapper {
+    padding: 0 10px 0;
   }
 }
