--- a/src/features/pagination/ui/styles.module.css
+++ b/src/features/pagination/ui/styles.module.css
@@ -2,22 +2,34 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 
 .list {
   display: flex;
-  align-items: center;
-  gap: 4px;
-  padding: 2px 6px;
+  gap: 10px;
 }
 
 .page {
   border: none;
 }
 
+.pageItem {
+  width: 21px !important;
+  height: 25px !important;
+  padding: 4px 12px !important;
+  border-radius: 0 !important;
+  border: none !important;
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .pageSelected {
   background-color: #6a0bff;
-  color: #fff;
+  color: #fff !important;
 }
 
 .arrowItem {
@@ -67,5 +79,6 @@
 @media (max-width: 375px) {
   .list {
     flex-direction: column;
+    align-items: center;
   }
 }
