--- a/src/widgets/header/ui/styles.module.css
+++ b/src/widgets/header/ui/styles.module.css
@@ -12,6 +12,12 @@
   gap: 52px;
 }
 
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
 .mainNav,
 .authNav {
   display: flex;
@@ -56,7 +62,6 @@
   top: 4px;
 }
 
-
 @media (max-width: 920px) {
   .header {
     padding: 15px 30px;
@@ -76,10 +81,7 @@
   .branding {
     display: flex;
     align-items: center;
-  }
-
-  .logo {
-    margin-right: 0;
+    gap: 34px;
   }
 
   .authNav.showAuthNav {
@@ -113,5 +115,24 @@
     right: 16px;
     width: 20px;
     height: 20px;
+  }
+}
+
+@media (max-width: 420px) {
+  .header {
+    padding: 10px;
+  }
+
+  .branding {
+    gap: 20px;
+  }
+
+  .logo > :last-child {
+    display: none;
+  }
+
+  .mainNav.showMainNav {
+    top: 54px;
+    left: 54px;
   }
 }
