--- a/src/app/global.css
+++ b/src/app/global.css
@@ -95,7 +95,12 @@ body {
   line-height: 1.3;
   background-color: #f8f8f8;
 }
-
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+}
 /* 2. Поддержка HTML5-тегов в старых браузерах */
 article,
 aside,
