--- a/src/pages/questionsList/ui/styles.module.css
+++ b/src/pages/questionsList/ui/styles.module.css
@@ -1,14 +1,14 @@
 .wrapper {
   margin-top: 40px;
-  padding: 0 30px 0;
   position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 20px;
 }
 
 .questions {
   flex: 1 1 0;
+  min-width: 450px;
   max-width: 804px;
   background-color: #fff;
   padding: 24px 20px 40px;
@@ -33,10 +33,12 @@
 
 @media (max-width: 800px) {
   .wrapper {
-    padding: 0 10px 0;
     display: block;
   }
 
+  .questions {
+    min-width: auto;
+  }
   .container > section {
     padding: 20px 10px;
   }
